--- a/webroot/less/components/info.less
+++ b/webroot/less/components/info.less
@@ -1,4 +1,8 @@
 .info{
+    .text-center;
+    .m-auto;
+    .container-text;
+    transition: 0.5s ease-in-out;
 
     h2{
         margin-bottom: 0.23em;
