--- a/webroot/less/base/home.less
+++ b/webroot/less/base/home.less
@@ -59,8 +59,42 @@
         display: grid;
         grid-template-columns: 1fr;
         justify-content: center;
+        .m-auto;
         align-items: center;
         margin-bottom: clamp(20px, 86vw * @px2vw, 86px);
+        position: relative;
+        width: clamp(350px, 1576vw * @px2vw, 1576px);
+
+        &:hover{
+            .info{
+                transform: translateY(-10px);
+            }
+
+            img:first-of-type,
+            img:nth-of-type(2){
+                opacity: 1;
+            }
+        }
+
+
+
+        img:first-of-type{
+            opacity: 0;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: clamp(250px, 388vw * @px2vw, 388px);
+            transition: 0.5s ease-in-out;
+        }
+
+        img:nth-of-type(2){
+            opacity: 0;
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: clamp(300px, 418vw * @px2vw, 418px);
+            transition: 0.5s ease-in-out;
+        }
     }
 
     .swiper-wrapper{
