--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -1,11 +1,12 @@
 .img-text{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    padding-right: clamp(0px, 53vw * @px2vw, 53px);
+    padding-left: clamp(0px, 44vw * @px2vw, 44px);
 
     @media screen and (max-width: 760px) {
         display: block;
-        padding-right: 0;
+        padding-left: 0;
+        margin: auto;
     }
 
     &--opacity{
@@ -20,6 +21,7 @@
         .font-180;
         overflow: hidden;
         width: 100%;
+        height: 100%;
 
         img{
             width: 100%;
