--- a/webroot/less/base/animations.less
+++ b/webroot/less/base/animations.less
@@ -279,6 +279,28 @@
 }
 
 
+@keyframes fadeFromTopText {
+  0% {
+    transform: translateY(-10px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+
+.fadeFromTopText{
+  transform: translateY(-10px);
+  opacity: 0;
+}
+
+.fadeFromTopText.is-in{
+  animation: fadeFromTopText 0.8s ease-in-out forwards;
+}
+
+
+
 
 @keyframes fadeFromBottom {
   0% {
@@ -332,14 +354,14 @@
 }
 
 .elementAnimation-0.is-in{
-  animation: elementAnimation-0 0.5s ease-in-out forwards;
+  animation: elementAnimation-0 1s ease-in-out forwards;
 }
 
 
 
 @keyframes elementAnimation-1 {
   0% {
-    margin-top: clamp(15px, 46vw * @px2vw, 46px);
+    margin-top: clamp(15px, 69vw * @px2vw, 69px);
   }
   100% {
     margin-top: 0;
@@ -347,17 +369,17 @@
 }
 
 .elementAnimation-1{
-  margin-top: clamp(15px, 46vw * @px2vw, 46px);
+  margin-top: clamp(15px, 69vw * @px2vw, 69px);
 }
 
 .elementAnimation-1.is-in{
-  animation: elementAnimation-1 0.5s ease-in-out forwards;
+  animation: elementAnimation-1 1s ease-in-out forwards;
 }
 
 
 @keyframes elementAnimation-2 {
   0% {
-    margin-top: clamp(30px, 92vw * @px2vw, 92px);
+    margin-top: clamp(30px, 115vw * @px2vw, 115px);
   }
   100% {
     margin-top: 0;
@@ -365,9 +387,53 @@
 }
 
 .elementAnimation-2{
-  margin-top: clamp(30px, 92vw * @px2vw, 92px);
+  margin-top: clamp(30px, 115vw * @px2vw, 115px);
 }
 
 .elementAnimation-2.is-in{
-  animation: elementAnimation-2 0.5s ease-in-out forwards;
+  animation: elementAnimation-2 1s ease-in-out forwards;
+}
+
+
+
+
+@keyframes productTripleImg-0 {
+  0% {
+    transform: translateX(-2.5em);
+  }
+  100% {
+    transform: translateX(5em);
+  }
+}
+
+.productTripleImg-0.is-in{
+  animation: productTripleImg-0 1.5s ease-in-out forwards;
+}
+
+
+@keyframes productTripleImg-1 {
+  0% {
+    transform: translate3d(-50%, 30%, 0);
+  }
+  100% {
+    transform: translate3d(-50%, 0, 0);
+  }
+}
+
+.productTripleImg-1.is-in{
+  animation: productTripleImg-1 1.5s ease-in-out forwards;
+}
+
+
+@keyframes productTripleImg-2 {
+  0% {
+    transform: translateX(2.5em);
+  }
+  100% {
+    transform: translateX(-5em);
+  }
+}
+
+.productTripleImg-2.is-in{
+  animation: productTripleImg-2 1.5s ease-in-out forwards;
 }
