--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -19,7 +19,7 @@
         & :nth-child(2){
             top: clamp(20px, 97vw * @px2vw, 97px);
             left: 51%;
-            transform: translateX(-50%);
+            transform: translate3d(-50%, 30%, 0);
             width: clamp(150px, 445vw * @px2vw, 445px);
 
             @media screen and (max-width: @mobile-l) {
