animazioni in filosofia

--- a/webroot/less/base/animations.less
+++ b/webroot/less/base/animations.less
@@ -437,3 +437,72 @@
 .productTripleImg-2.is-in{
   animation: productTripleImg-2 1.5s ease-in-out forwards;
 }
+
+
+
+
+@keyframes philosophyTripleImg-0 {
+  0% {
+    transform: translateX(-2.5em);
+  }
+  100% {
+    transform: translateX(5em);
+  }
+}
+
+.philosophyTripleImg-0.is-in{
+  animation: philosophyTripleImg-0 1.5s ease-in-out forwards;
+}
+
+
+@keyframes philosophyTripleImg-1 {
+  0% {
+    top: clamp(20px, 97vw * @px2vw, 97px);
+  }
+  100% {
+     top: 0;
+  }
+}
+
+.philosophyTripleImg-1{
+  top: clamp(20px, 97vw * @px2vw, 97px);
+}
+
+.philosophyTripleImg-1.is-in{
+  animation: philosophyTripleImg-1 1.5s ease-in-out forwards;
+}
+
+
+@keyframes philosophyTripleImg-2 {
+  0% {
+    transform: translateX(2.5em);
+  }
+  100% {
+    transform: translateX(-5em);
+  }
+}
+
+.philosophyTripleImg-2.is-in{
+  animation: philosophyTripleImg-2 1.5s ease-in-out forwards;
+}
+
+
+
+
+@keyframes scaleOut {
+  0% {
+    transform: scale(0.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.scaleOut{
+  transform: scale(0.5);
+}
+
+.scaleOut.is-in{
+  animation: scaleOut 1s ease-in-out forwards;
+}
+
