--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -1,12 +1,18 @@
 .img-text{
+    .container-l;
     display: grid;
     grid-template-columns: 1fr 1fr;
     padding-left: clamp(0px, 44vw * @px2vw, 44px);
 
+    @media screen and (min-width: 1921px) {
+        padding-left: 0;
+        .m-auto;
+    }
+
     @media screen and (max-width: 760px) {
         display: block;
         padding-left: 0;
-        margin: auto;
+        .m-auto;
     }
 
     &--opacity{
