--- a/webroot/less/components/mobile-menu.less
+++ b/webroot/less/components/mobile-menu.less
@@ -88,6 +88,13 @@
             line-height: 1em;
             display: inline-block;
             color: @white;
+            .uppercase;
+            transition: 0.2s ease-in-out;
+
+            &:hover{
+                opacity: 40%;
+            }
+
             &--parent{
                 display: inline-flex;
                 align-items: center;
