--- a/webroot/less/components/prodotti.less
+++ b/webroot/less/components/prodotti.less
@@ -2,6 +2,7 @@
     .text-center;
     .container-prodotti;
     .m-auto;
+    overflow: hidden;
 
     @media screen and (max-width: @tablet-m) {
         width: fit-content;
@@ -18,6 +19,7 @@
 
         @media screen and (max-width: @mobile-l) {
             grid-template-columns: 1fr;
+            width: 100%;
         }
 
         & > * {
