--- a/webroot/less/components/cursor.less
+++ b/webroot/less/components/cursor.less
@@ -10,4 +10,8 @@
     z-index: 9999;
     transform: translate(-50%, -50%);
     transition: transform 0.1s ease;
+
+    @media (pointer: coarse) {
+        display: none;
+    }
 }
