--- a/webroot/less/base/animations.less
+++ b/webroot/less/base/animations.less
@@ -402,7 +402,7 @@
     transform: translateX(-2.5em);
   }
   100% {
-    transform: translateX(5em);
+    transform: translateX(10%);
   }
 }
 
@@ -430,7 +430,7 @@
     transform: translateX(2.5em);
   }
   100% {
-    transform: translateX(-5em);
+    transform: translateX(-10%);
   }
 }
 
@@ -446,7 +446,7 @@
     transform: translateX(-2.5em);
   }
   100% {
-    transform: translateX(5em);
+    transform: translateX(10%);
   }
 }
 
@@ -478,7 +478,7 @@
     transform: translateX(2.5em);
   }
   100% {
-    transform: translateX(-5em);
+    transform: translateX(-10%);
   }
 }
 
