--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -3,7 +3,7 @@
     overflow: hidden;
 
     &--products{
-        height: clamp(300px, 985vw * @px2vw, 985px);
+        height: clamp(400px, 985vw * @px2vw, 985px);
 
         img{
             position: absolute;
@@ -36,7 +36,7 @@
     }
 
     &--secondary{
-        height: clamp(300px, 822vw * @px2vw, 822px);
+        height: clamp(400px, 822vw * @px2vw, 822px);
 
         img{
             position: absolute;
@@ -63,8 +63,13 @@
             top: 0;
             right: 0;
             transform: translateX(2.5em);
-            width: clamp(200px, 547vw * @px2vw, 547px);
+            width: clamp(160px, 547vw * @px2vw, 547px);
             height: clamp(210px, 735vw * @px2vw, 735px);
+
+            @media screen and (max-width: @tablet-s) {
+                top: 50%;
+                transform: translateX(2.5em) translateY(-50%);
+            }
         }
     }
 }
