--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -36,7 +36,7 @@
     }
 
     &--secondary{
-        height: clamp(400px, 822vw * @px2vw, 822px);
+        height: clamp(490px, 822vw * @px2vw, 822px);
 
         img{
             position: absolute;
@@ -67,8 +67,8 @@
             height: clamp(210px, 735vw * @px2vw, 735px);
 
             @media screen and (max-width: @tablet-s) {
-                top: 50%;
-                transform: translateX(2.5em) translateY(-50%);
+                top: 25%;
+                transform: translateX(2.5em);
             }
         }
     }
