--- a/webroot/less/components/info.less
+++ b/webroot/less/components/info.less
@@ -14,5 +14,6 @@
         .font-18;
         .font-secondary;
         .fw-book;
+        margin-bottom: clamp(12px, 25vw * @px2vw, 25px);
     }
 }
