--- a/webroot/less/base/animations.less
+++ b/webroot/less/base/animations.less
@@ -134,7 +134,7 @@
 
 
 
-@keyframes zoomIn {
+@keyframes zoomInCustom {
   0% {
       transform: scale(0.95);
       opacity: 0;
@@ -145,13 +145,13 @@
   }
 }
 
-.zoomIn{
+.zoomInCustom{
   transform: scale(0.95);
   opacity: 0;
 }
 
-.zoomIn.is-in{
-  animation: zoomIn 0.5s ease-in-out forwards;
+.zoomInCustom.is-in{
+  animation: zoomInCustom 0.5s ease-in-out forwards;
 }
 
 
@@ -222,11 +222,15 @@
 @keyframes imgWidth {
   0% {
     transform: scaleX(0.9);
-    transform-origin: left;
   }
   100% {
     transform: scaleX(1);
   }
+}
+
+.imgWidth{
+  transform-origin: left;
+  transform: scaleX(0.9);
 }
 
 .imgWidth.is-in{
