--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -41,11 +41,11 @@
             justify-content: center;
             gap: 16px;
             margin-bottom: 10px;
+            margin-top: 15px;
 
-            @media screen and (max-width: @mobile-l) {
+            @media screen and (max-width: @tablet-l) {
                 flex-direction: column;
                 align-items: center;
-                margin-top: 15px;
                 gap: 8px;
             }
 
