--- a/webroot/less/components/cta.less
+++ b/webroot/less/components/cta.less
@@ -1,12 +1,29 @@
-.cta{
+.cta {
     display: inline-flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding-bottom: 6px;
     color: @black;
-    border-bottom: 1px solid @black;
     text-transform: uppercase;
     .font-16;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+
+    &__label {
+        display: inline-block;
+    }
+
+    &__border {
+        margin-top: 6px;
+        background-color: @black;
+        height: 1px;
+        width: 100%;
+        transform-origin: left;
+        transition: transform 0.3s ease-in-out;
+    }
+
+    &:hover &__border {
+        transform: scaleX(0.5);
+    }
 }
