--- a/webroot/less/base/form.less
+++ b/webroot/less/base/form.less
@@ -126,7 +126,7 @@ label {
         
         .error-message {
             position: absolute;
-            top: 100%;
+            top: 110%; 
             left: 0;
             right: 0;
         }
@@ -239,4 +239,8 @@ label {
         color: inherit;
         text-decoration: underline;
     }
+}
+
+.error{
+    margin-bottom: 55px;
 }
