--- a/webroot/less/components/gallery.less
+++ b/webroot/less/components/gallery.less
@@ -18,6 +18,7 @@
         @media screen and (max-width: 764px) {
             scroll-snap-align: start;
             width: 350px;
+            animation: none !important;
         }
         @media screen and (max-width: 450px) {
             width: 250px;
