portato le classi da html a css + rimosso le classi dai p modificabili dal cliente

--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -31,9 +31,12 @@
         &__text{
             .font-secondary;
             .fw-light;
-            .font-20;
-            .letterSpacing(7%);
+            letter-spacing: 0.07em;
             margin-bottom: 0.6em;
+
+            p{
+                .font-20;
+            }
         }
 
         &__text-2{
