--- a/webroot/less/components/gallery.less
+++ b/webroot/less/components/gallery.less
@@ -57,6 +57,7 @@
             transform: translateX(-50%);
             color: @white;
             .text-center;
+            .font-128;
         }
     }
 
@@ -75,7 +76,10 @@
     p{
         margin: 0 auto;
         width: clamp(80px, 220vw * @px2vw, 220px);
-
+        .font-secondary; 
+        .font-20; .fw-medium;
+        .uppercase; 
+        .text-center;
 
         @media screen and (max-width: 764px) {
             width: 90%;
