--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -72,14 +72,19 @@
 
         h2{
             margin-bottom: 0.4em;
+            .font-64;
         }
-        
-        p{
-            .font-18;
+
+        &__paragraph{
             .font-secondary;
             .fw-book;
             margin-bottom: 2.5em;
+            
+            p{
+                .font-18;
+            }
         }
+
 
         .cta{
             margin-left: 2.1em;
