--- a/webroot/less/components/info.less
+++ b/webroot/less/components/info.less
@@ -5,10 +5,11 @@
     transition: 0.5s ease-in-out;
 
     h2{
+        .font-64;
         margin-bottom: 0.23em;
     }
 
-    p{
+    &__text{
         .m-auto;
         width: clamp(320px, 587vw * @px2vw, 587px);
         .font-18;
