--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -112,18 +112,18 @@ li{
 
 .font-180{
     font-size: clamp(70px, 180vw * @px2vw, 180px);
-    line-height: 102.3%;
+    line-height: 1.023em;
 }
 
 
 .font-128{
     font-size: clamp(90px, 128vw * @px2vw, 128px);
-    line-height: 102.3%;
+    line-height: 1.023em;
 }
 
 .font-120{
     font-size: clamp(20px, 120vw * @px2vw, 120px);
-    line-height: 102.3%;
+    line-height: 1.023em;
 }
 
 .font-96{
@@ -137,7 +137,7 @@ li{
 
 .font-60{
     font-size: clamp(30px, 65vw * @px2vw, 60px);
-    line-height: 102.3%;
+    line-height: 1.023em;
     * {
         line-height: inherit;
     }
@@ -182,7 +182,7 @@ li{
 
 .font-20{
     font-size: clamp(14px, 20vw * @px2vw, 20px);
-    line-height: 102.3%;
+    line-height: 1.023em;
 }
 
 .font-18{
@@ -197,7 +197,7 @@ li{
 
 .font-15{
     font-size: clamp(12px, 15vw * @px2vw, 15px);
-    line-height: 102.3%;
+    line-height: 1.023em;
 }
 
 .font-14{
