--- a/webroot/less/components/title.less
+++ b/webroot/less/components/title.less
@@ -2,20 +2,23 @@
     .text-center;
     .m-auto;
     width: clamp(350px, 893vw * @px2vw, 893px);
-    .font-96;
 
     h1{
         width: 100%;
         text-transform: uppercase;
         margin-bottom: 0.57em;
+        .font-96;
     }
 
-    p{
-        width: clamp(300px, 607vw * @px2vw, 607px);
+    &__text{
+        width: clamp(320px, 607vw * @px2vw, 607px);
         .font-secondary;
-        .font-18;
         .fw-book;
         .m-auto;
+
+        p{
+            .font-18
+        }
     }
 }
 
