--- a/webroot/less/base/typo.less
+++ b/webroot/less/base/typo.less
@@ -187,12 +187,12 @@ li{
 
 .font-18{
     font-size: clamp(14px, 18vw * @px2vw, 18px);
-    line-height: 140%;
+    line-height: 1.40em;
 }
 
 .font-16{
     font-size: clamp(13px, 16vw * @px2vw, 16px);
-    line-height: 140%;
+    line-height: 1.40em;
 }
 
 .font-15{
