--- a/webroot/less/components/triple-img.less
+++ b/webroot/less/components/triple-img.less
@@ -37,6 +37,8 @@
 
     &--secondary{
         height: clamp(490px, 822vw * @px2vw, 822px);
+        .mb-175;
+        margin-top: clamp(50px, 104vw * @px2vw, 104px);
 
         img{
             position: absolute;
