--- a/webroot/less/custom/spaces.less
+++ b/webroot/less/custom/spaces.less
@@ -102,6 +102,7 @@
 //OTHERS
 
 .cols-3{
+    .m-auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     width: clamp(350px, 1145vw * @px2vw, 1145px);
