--- a/webroot/less/components/cursor.less
+++ b/webroot/less/components/cursor.less
@@ -10,6 +10,7 @@
     z-index: 9999;
     transform: translate(-50%, -50%);
     transition: transform 0.1s ease;
+    mix-blend-mode: difference;
 
     @media (pointer: coarse) {
         display: none;
