--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -51,12 +51,12 @@
         }
 
         &__word-1{
-            top: -0.07em;
-            right: 0;
+            top: -0.11em;
+            right: -0.05em;
         }
 
         &__word-2{
-            bottom: -0.20em;
+            bottom: -0.21em;
             left: 0;
         }
     }
