--- a/webroot/less/components/info.less
+++ b/webroot/less/components/info.less
@@ -12,9 +12,12 @@
     &__text{
         .m-auto;
         width: clamp(320px, 587vw * @px2vw, 587px);
-        .font-18;
         .font-secondary;
         .fw-book;
         margin-bottom: clamp(12px, 25vw * @px2vw, 25px);
+
+        p{
+            .font-18;
+        }
     }
 }
