--- a/webroot/less/components/hamburger.less
+++ b/webroot/less/components/hamburger.less
@@ -11,6 +11,7 @@
 
     &::before{
         content: '';
+        pointer-events: none;
         width: 100%;
         height: 100%;
         border-radius: 1000px;
