--- a/webroot/less/base/button.less
+++ b/webroot/less/base/button.less
@@ -1,6 +1,6 @@
 .button{
-    color: @white;
-    border-bottom: 1px solid @white;
+    color: @light-text-color;
+    border-bottom: 1px solid @border-color;
     .font-14;
     .font-secondary;
     padding-bottom: 0.57em;
