--- a/webroot/less/base/form.less
+++ b/webroot/less/base/form.less
@@ -45,10 +45,10 @@ textarea,
 select {
     height: 55px;
     line-height: 55px;
-    border-bottom: 1px solid @white;
+    border-bottom: 1px solid @border-color;
     transition: 300ms;
     .font-18;
-    color: @white;
+    color: @light-text-color;
     &:focus {
         border-color: lighten(@input-border-color, 30%);
     }
