--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -4,7 +4,7 @@
     grid-template-columns: 1fr;
     gap: 2.5vw;
     position: relative;
-    color: @white;
+    color: @light-text-color;
     flex-grow: 1;
 
     video{
