--- a/webroot/less/components/gallery.less
+++ b/webroot/less/components/gallery.less
@@ -55,7 +55,7 @@
             bottom: -0.21em;
             left: 50%;
             transform: translateX(-50%);
-            color: @white;
+            color: @light-text-color;
             .text-center;
             .font-128;
         }
