--- a/webroot/less/components/img-text.less
+++ b/webroot/less/components/img-text.less
@@ -23,7 +23,7 @@
 
     &__img{
         position: relative;
-        color: @white;
+        color: @light-text-color;
         .font-180;
         overflow: hidden;
         width: 100%;
@@ -79,10 +79,6 @@
             .font-secondary;
             .fw-book;
             margin-bottom: 2.5em;
-            
-            p{
-                .font-18;
-            }
         }
 
 
