--- a/webroot/less/components/mobile-menu.less
+++ b/webroot/less/components/mobile-menu.less
@@ -87,7 +87,7 @@
             font-size: clamp(30px, 60vw * @px2vw, 60px);
             line-height: 1em;
             display: inline-block;
-            color: @white;
+            color: @light-text-color;
             .uppercase;
             transition: 0.2s ease-in-out;
 
