--- a/webroot/admin-assets/less/base/typo.less
+++ b/webroot/admin-assets/less/base/typo.less
@@ -4,13 +4,13 @@ html {
 
 body {
   font-family: "Inter", sans-serif;
-  color: @black;
+  color: @text-color;
   font-size: 1rem;
   .medium;
 }
 
 a {
-  color: @black;
+  color: @text-color;
 }
 
 p {
