--- a/webroot/less/base/home.less
+++ b/webroot/less/base/home.less
@@ -3,7 +3,7 @@
         position: relative;
         height: 100vh;
         width: 100%;
-        color: @white;
+        color: @light-text-color;
         display: flex;
         justify-content: center;
         align-items: center;
