--- a/webroot/less/components/big-img.less
+++ b/webroot/less/components/big-img.less
@@ -2,7 +2,7 @@
     position: relative;
     width: 100%;
     height: 100vh;
-    color: @white;
+    color: @light-text-color;
     display: flex;
     align-items: center;
     justify-content: center;
