--- a/webroot/less/components/cta.less
+++ b/webroot/less/components/cta.less
@@ -4,7 +4,7 @@
     align-items: center;
     justify-content: center;
     padding-bottom: 6px;
-    color: @black;
+    color: @text-color;
     text-transform: uppercase;
     .font-16;
     cursor: pointer;
@@ -16,7 +16,7 @@
 
     &__border {
         margin-top: 6px;
-        background-color: @black;
+        background-color: @secondary-bg-color;
         height: 1px;
         width: 100%;
         transform-origin: left;
