--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -140,7 +140,7 @@
         position: relative;
 
         &::before{
-            background-color: @black;
+            background-color: @secondary-bg-color;
             width: 100%;
             height: 100%;
             content: '';
@@ -157,7 +157,7 @@
             }
     
             &__legal{
-                color: @white;
+                color: @footer-color;
                 .text-center;
                 margin: auto;
                 justify-items: center;
@@ -165,14 +165,14 @@
     
                 svg{
                     path{
-                        fill: @white;
+                        fill: @footer-color;
                         opacity: 50%;
                     }
                 }
             }
     
             &__bottom{
-                color: @white;
+                color: @footer-color;
             }
         }
     }
