--- a/webroot/less/components/hamburger.less
+++ b/webroot/less/components/hamburger.less
@@ -2,7 +2,7 @@
     display: block;
     width: clamp(64px, 97vw * @px2vw, 97px);
     height: clamp(64px, 97vw * @px2vw, 97px);
-    background-color: @black;
+    background-color: @secondary-bg-color;
     border-radius: 1000px;
     position: relative;
     cursor: pointer;
@@ -18,7 +18,7 @@
         position: absolute;
         top: 0;
         right: 0;
-        background-color: @black;
+        background-color: @secondary-bg-color;
         transition: 0.6s ease-in-out, background-color 0.3s ease-in-out;
     }
 
