--- a/webroot/less/components/header.less
+++ b/webroot/less/components/header.less
@@ -44,6 +44,7 @@
         opacity: 0;
         transition: 0.3s ease-in-out;
         z-index: 10000;
+        visibility: hidden;
 
         @media screen and (max-width: @l) {
             flex: 0 0 180px;
@@ -58,6 +59,7 @@
         .header__logo{
             opacity: 1;
             transition-delay: 0.2s;
+            visibility: visible;
         }
     }
 
