immagini in gitignore e vars footer

--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -157,7 +157,7 @@
             }
     
             &__legal{
-                color: @footer-color;
+                color: @footer-color-secondary;
                 .text-center;
                 margin: auto;
                 justify-items: center;
@@ -165,14 +165,14 @@
     
                 svg{
                     path{
-                        fill: @footer-color;
+                        fill: @footer-color-secondary;
                         opacity: 50%;
                     }
                 }
             }
     
             &__bottom{
-                color: @footer-color;
+                color: @footer-color-secondary;
             }
         }
     }
