footer bug fixed

--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -2,6 +2,7 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     align-items: center;
+    flex-grow: 0;
     .font-15;
     padding: clamp(80px, 165vw * @px2vw, 165px) clamp(10px, 128vw * @px2vw, 128px) clamp(60px, 241vw * @px2vw, 241px);
     .font-secondary;
