--- a/webroot/less/base/global.less
+++ b/webroot/less/base/global.less
@@ -7,6 +7,7 @@ html {
 
 body {
   -ms-overflow-style: none;
+  overflow: hidden;
 }
 
 body::-webkit-scrollbar {
@@ -88,4 +89,8 @@ video {
 .mobile-margin {
   margin-left: max(15px, 5vw);
   margin-right: max(15px, 5vw);
+}
+
+.footer-wrapper{
+  overflow: hidden;
 }
