--- a/webroot/less/components/contacts.less
+++ b/webroot/less/components/contacts.less
@@ -1,5 +1,6 @@
 .contacts{
     .pt-h;
+    padding-bottom: clamp(300px, 500vw * @px2vw, 500px);
     display: grid;
     grid-template-columns: 1fr;
     gap: 2.5vw;
