--- a/webroot/less/base/global.less
+++ b/webroot/less/base/global.less
@@ -1,13 +1,15 @@
 // no scrollbar
 html {
   scrollbar-width: none;
-  .font-18;
   color: @text-color;
 }
 
 body {
   -ms-overflow-style: none;
   overflow: hidden;
+  p {
+    .font-18;
+  }
 }
 
 body::-webkit-scrollbar {
