--- a/webroot/less/components/header.less
+++ b/webroot/less/components/header.less
@@ -45,6 +45,7 @@
         transition: 0.3s ease-in-out;
         z-index: 10000;
         visibility: hidden;
+        margin-top: 10px;
 
         @media screen and (max-width: @l) {
             flex: 0 0 180px;
