--- a/webroot/less/components/list.less
+++ b/webroot/less/components/list.less
@@ -22,10 +22,12 @@
 
     &__description{
         .fw-book;
+        text-align: right;
         grid-column: 2 span;
         justify-self: end;
         @media screen and (max-width: 750px) {
             justify-self: start;
+            text-align: left;
         }
     }
 
