--- a/webroot/less/components/product.less
+++ b/webroot/less/components/product.less
@@ -21,6 +21,17 @@
         }
     }
 
+    &__description{
+        .mb-307; 
+        .text-center; 
+        .m-auto; 
+        .container-paragraph;
+
+        p{
+            .font-48; 
+        }
+    }
+
     &__gallery{
         .m-auto;
         .container-m;
