--- a/webroot/less/base/font.less
+++ b/webroot/less/base/font.less
@@ -38,3 +38,11 @@
     font-display: swap;
     font-style: normal;
 }
+
+@font-face {
+    font-family: "Cormorant Garamond";
+    src: url("../fonts/CormorantGaramond-Italic.ttf") format("truetype");
+    font-weight: 400;
+    font-display: swap;
+    font-style: italic;
+}
