--- a/webroot/less/base/animations.less
+++ b/webroot/less/base/animations.less
@@ -238,6 +238,26 @@
 }
 
 
+@keyframes imgWidthIMG {
+  0% {
+    transform: scaleX(1.1);
+  }
+  100% {
+    transform: scaleX(1);
+  }
+}
+
+.imgWidthIMG{
+  transform-origin: left;
+  transform: scaleX(1.1);
+}
+
+.imgWidthIMG.is-in{
+  animation: imgWidthIMG 1s ease-in-out forwards;
+}
+
+
+
 
 @keyframes fadeFromTopDelay-1 {
   0% {
