last fix on footer

--- a/webroot/less/components/paragraph.less
+++ b/webroot/less/components/paragraph.less
@@ -2,6 +2,9 @@
     .container-paragraph;
     .m-auto; 
     .text-center; 
-    .font-48; 
-    .mb-360; 
+    .mb-360;
+    
+    p{
+        .font-48; 
+    }
 }
