--- a/webroot/less/components/footer.less
+++ b/webroot/less/components/footer.less
@@ -133,8 +133,9 @@
         width: 100%;
         text-align: center;
         position: absolute;
-        bottom: -1.6em;
+        bottom: -0.2em;
         left: 0;
+        .font-120;
 
         p{
             font-style: italic;
